added geneartors to rep matrix

--- a/Graphene_connectivity.ipynb
+++ b/Graphene_connectivity.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from representation_matrices_explicit import GroupD6h, GroupD6D3hC6v, BaseGroup\n",
-    "from graphene.graphene import GrapheneHamiltonian, CosetReps\n",
+    "from representation_matrices_explicit import GroupD6h, GroupD6D3hC6v, BaseGroup, CosetReps\n",
+    "from graphene.graphene import GrapheneHamiltonian\n",
     "from utility_functions import irrep_decomposition, is_faithful, character_of_representation, projection_operator, ismember\n",
     "import numpy as np\n",
     "import sympy as sp\n",
-    "\n",
+    "import pandas as pd\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n"
    ]
@@ -40,66 +40,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "718e9059-bcb6-47dd-ac73-07ba5ad70425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphene."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13c2e10f-1a23-4dc5-ae70-024bc38039b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_group = [[R_tau * R for R in graphene.site_symmetry_group.faithful_representation] for R_tau in graphene.coset_reps_ssg.faithful_representation]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6f0a8e4-a923-40e5-8cc1-b951f1aa8084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coset_reps_subgroup = CosetReps(symbols=['E', 'I'], full_group=graphene.group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7350b3da-aba0-41f9-bdcc-1ff04e214a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphene.group_to_subgroup_mapping_3(graphene.site_symmetry_group, coset_reps_subgroup, graphene.coset_reps_ssg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3050a7-338b-48ba-85a0-6d1c49ff35a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(full_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca064b97-0a6c-4f36-a0ac-ec53cbac789b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(full_group).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc306409-f9f3-467b-ae0e-c3bdab2f900b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_to_ssg_1 = graphene.group_to_subgroup_mapping(graphene.site_symmetry_group, graphene.coset_reps_ssg, extended_form=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f69f7ffb-d023-4672-843e-27533f0d3f27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_to_ssg_2 = graphene.group_to_subgroup_mapping_2(graphene.site_symmetry_group, graphene.coset_reps_ssg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5039776c-9d9c-45e6-b07d-1b9d4d54d054",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_to_ssg_12 = {}\n",
+    "for row in range(g_to_ssg_1.shape[0]):\n",
+    "    t_row, t_col, R, Rt = tuple(g_to_ssg_1[row, :])\n",
+    "    if R not in g_to_ssg_12:\n",
+    "        g_to_ssg_12[R] = []\n",
+    "    g_to_ssg_12[R].append((t_row, t_col, Rt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e29c79-064e-4ac0-9952-642f31684078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = [(i, j )for i,j in zip(graphene.subgroup_indices_in_full_group_2(graphene.site_symmetry_group), graphene.subgroup_indices_in_full_group(graphene.site_symmetry_group))]\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "925aa35f-c5f1-4600-865d-dc1cf3eabb33",
+   "metadata": {},
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b5c042-2591-49e6-b396-5c1053673656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br_pz_G1 = graphene.generate_band_representation('g2m', graphene.group_of_G)\n",
+    "br_pz_G2 = graphene.generate_band_representation_2('g2m', graphene.group_of_G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eced91f-93fb-4518-a4b7-29f13e9c5113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = GroupD6h(is_double_group=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b60567c1-6d4f-41b5-b3e5-8808248e7835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br_pz_G = graphene.generate_band_representation_2('g2m', graphene.group_of_G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "199ae686-fc62-4f87-8325-93e6e9861271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P_g4p = graphene.projection_operator_k_point(graphene.group_of_G, br_pz_G, 'g4p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1226c3b-a9ab-4db6-877b-45a0e87f64df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtossg = graphene.group_to_subgroup_mapping_2(\n",
+    "            graphene.site_symmetry_group,\n",
+    "            coset_reps=graphene.coset_reps_ssg,\n",
+    "            from_subgroup=graphene.group_of_G.group\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279283a2-afd2-41a1-9cd2-105c94285d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtossg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e3e323-2935-4443-ae64-e8cdf4a4dd8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "irrep_decomposition(br_pz_G, graphene.group_of_G.group.irreducible_representations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dd402e3-fb6e-4797-a708-32d0b2b58912",
    "metadata": {},
    "outputs": [],
    "source": [
-    "br_pz_G = graphene.generate_band_representation('g2m', 'G')\n",
-    "br_pz_K = graphene.generate_band_representation('g2m', 'K')\n",
-    "br_pz_M = graphene.generate_band_representation('g2m', 'M')\n",
-    "br_pz_spin_G = graphene.generate_band_representation('g8p', 'G')\n",
-    "br_pz_spin_K = graphene.generate_band_representation('g8p', 'K')\n",
-    "br_pz_spin_M = graphene.generate_band_representation('g8p', 'M')"
+    "br_pz_G = graphene.generate_band_representation('g2m', graphene.group_of_G)\n",
+    "br_pz_K = graphene.generate_band_representation('g2m', graphene.group_of_K)\n",
+    "br_pz_M = graphene.generate_band_representation('g2m', graphene.group_of_M)\n",
+    "br_pz_spin_G = graphene.generate_band_representation('g8p', graphene.group_of_G)\n",
+    "br_pz_spin_K = graphene.generate_band_representation('g8p', graphene.group_of_K)\n",
+    "br_pz_spin_M = graphene.generate_band_representation('g8p', graphene.group_of_M)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ee1c5530-870f-4e99-ae2e-e983b6b21284",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def projection_operator_k_point(self: GrapheneHamiltonian, k_point_name: str, band_rep: list, irrep_in_decomp_name: str):\n",
-    "    if k_point_name.upper() == self.group_of_G.name:\n",
-    "        group_k = self.group_of_G\n",
-    "    elif k_point_name.upper() == self.group_of_K.name:\n",
-    "        group_k = self.group_of_K\n",
-    "    elif k_point_name.upper() == self.group_of_M.name:\n",
-    "        group_k = self.group_of_M\n",
-    "    else:\n",
-    "        raise NotImplementedError('k point not implemented')\n",
+    "P_g4p = graphene.projection_operator_k_point(graphene.group_of_G, br_pz_G, 'g4p')\n",
+    "P_g2m = graphene.projection_operator_k_point(graphene.group_of_G, br_pz_G, 'g2m')\n",
     "\n",
-    "    \n",
-    "    mu = group_k.group.irreducible_representations[irrep_in_decomp_name]\n",
-    "    d_mu = mu[0].shape[0] if isinstance(mu[0], sp.MatrixBase) or isinstance(mu[0], np.ndarray) else 1\n",
-    "    results = {}\n",
-    "    for i in range(d_mu):\n",
-    "        for j in range(d_mu):\n",
-    "            results[i, j] = projection_operator(mu, band_rep, i, j)\n",
+    "P_k5 = graphene.projection_operator_k_point(graphene.group_of_K, br_pz_K, 'g5')\n",
     "\n",
-    "    return results\n",
-    "            \n",
-    "    "
+    "P_m4p = graphene.projection_operator_k_point(graphene.group_of_M, br_pz_M, 'g4p')\n",
+    "P_m3m = graphene.projection_operator_k_point(graphene.group_of_M, br_pz_M, 'g3m')\n",
+    "\n",
+    "P_g8p = graphene.projection_operator_k_point(graphene.group_of_G, br_pz_spin_G, 'g8p')\n",
+    "P_g7m = graphene.projection_operator_k_point(graphene.group_of_G, br_pz_spin_G, 'g7m')\n",
+    "\n",
+    "P_k7 = graphene.projection_operator_k_point(graphene.group_of_K, br_pz_spin_K, 'g7')\n",
+    "P_k9 = graphene.projection_operator_k_point(graphene.group_of_K, br_pz_spin_K, 'g9')\n",
+    "\n",
+    "P_m5p = graphene.projection_operator_k_point(graphene.group_of_M, br_pz_spin_M, 'g5p')\n",
+    "P_m5m = graphene.projection_operator_k_point(graphene.group_of_M, br_pz_spin_M, 'g5m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fd0b9313-4a4f-45d2-ad7e-976daea1c7f8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'g5p': 1, 'g5m': 1}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "irrep_decomposition(\n",
     "    character_of_representation(br_pz_spin_M), \n",
@@ -109,38 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4affa7eb-db0d-4ab5-b5f1-dafd83b2c73a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "P_g4p = projection_operator_k_point(graphene, 'G', br_pz_G, 'g4p')\n",
-    "P_g2m = projection_operator_k_point(graphene, 'G', br_pz_G, 'g2m')\n",
-    "\n",
-    "P_k5 = projection_operator_k_point(graphene, 'K', br_pz_K, 'g5')\n",
-    "\n",
-    "P_m4p = projection_operator_k_point(graphene, 'M', br_pz_M, 'g4p')\n",
-    "P_m3m = projection_operator_k_point(graphene, 'M', br_pz_M, 'g3m')\n",
-    "\n",
-    "P_g8p = projection_operator_k_point(graphene, 'G', br_pz_spin_G, 'g8p')\n",
-    "P_g7m = projection_operator_k_point(graphene, 'G', br_pz_spin_G, 'g7m')\n",
-    "\n",
-    "P_k7 = projection_operator_k_point(graphene, 'K', br_pz_spin_K, 'g7')\n",
-    "P_k9 = projection_operator_k_point(graphene, 'K', br_pz_spin_K, 'g9')\n",
-    "\n",
-    "P_m5p = projection_operator_k_point(graphene, 'M', br_pz_spin_M, 'g5p')\n",
-    "P_m5m = projection_operator_k_point(graphene, 'M', br_pz_spin_M, 'g5m')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "fa825772-9c5e-4d91-9491-f3cbc689e692",
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_m5p"
+    "P_m4p"
    ]
   },
   {
@@ -182,6 +328,30 @@
    "source": [
     "[R for R in br_pz_M]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af959eeb-30f1-4f9d-aef4-09f82e5fb38e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fac4c52-4f4d-4d15-af53-6970f6d780ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1164a653-302f-4a66-8df6-261bb511c4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
